# cv-backend

api-fitness-v1/: Cargo.toml
api-fitness-v1/src/: main.rs  requests.rs
api-fitness-v1/src/handler/: assess_handler.rs  mod.rs  target_handler.rs
api-monkeys-v1/: Cargo.toml
api-monkeys-v1/src/: main.rs
api-monkeys-v1/src/genetic_algorithm/: client.rs  evolve_iter.rs  mod.rs  random.rs
