[package]
name = "api-monkeys-v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
substring="1.4.5"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }  # for our async runtime
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "fmt"] }
openssl = { version = "0.10", features = ["vendored"] }